# fsw

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  README.bsd  README.freebsd  README.md  README.osx  aclocal.m4  config.h.in  configure  configure.ac  event.cpp  event.h  fsevent_monitor.cpp  fsevent_monitor.h  fsevent_watcher.cpp  fsevent_watcher.h  fsw.7  fsw.cpp  fsw.h  fsw_exception.cpp  fsw_exception.h  fsw_log.cpp  fsw_log.h  fsw_map.h  fsw_set.h  index.html  inotify_monitor.cpp  inotify_monitor.h  kqueue_monitor.cpp  kqueue_monitor.h  kqueue_watcher.cpp  kqueue_watcher.h  log.cpp  monitor.cpp  monitor.h  (+9 more)
libfsw/: ChangeLog  Makefile.am  NEWS  cevent.h  configure.ac  event.h  filter.h  fsevent_monitor.cpp  fsevent_monitor.h  inotify_monitor.cpp  inotify_monitor.h  kqueue_monitor.cpp  kqueue_monitor.h  libfsw.cpp  libfsw.h  libfsw_exception.h  libfsw_log.cpp  monitor.cpp  monitor.h  path_utils.cpp  poll_monitor.cpp  poll_monitor.h
libfsw/c/: cevent.h  cfilter.h  cmonitor.h  error.h  libfsw.cpp  libfsw.h
libfsw/c++/: event.h  filter.h  fsevent_monitor.cpp  fsevent_monitor.h  inotify_monitor.cpp  inotify_monitor.h  kqueue_monitor.cpp  kqueue_monitor.h  libfsw_exception.cpp  libfsw_exception.h  libfsw_map.h  libfsw_set.h  monitor.cpp  monitor.h  path_utils.cpp  poll_monitor.cpp  poll_monitor.h
libfsw/m4/: ax_cxx_have_thread_local.m4
m4/: ax_cxx_functional.m4  ax_cxx_have_hash.m4
scripts/: fswatch-run-bash.in  fswatch-run-zsh.in
